<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Technovanza</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="black">#000000</string>
    <string name="label_events">Events</string>
    <string name="label_quiz">Quiz</string>
    <string name="label_didyouknow">Did You Know?</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="rules">Rules</string>
    <string name="back_to_home">Back to Home Screen</string>
    <string name="play">PLAY</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="back">Back</string>
    <string name="image_logo">Logo</string>
    <string name="main_no_items">No items</string>
    <string name="label_icode">I-Code</string>
    <string name="label_robotics">Autobots</string>
    <string name="label_eureka">Eureka</string>
    <string name="label_manageria">Manageria</string>
    <string name="label_imech">I-Mech</string>
    <string name="label_ibuild">I-Build</string>
    <string name="label_rcmo">RCMO</string>
    <string name="label_conf">Viwanda</string>
    <string name="label_impulse">Impulse</string>
    <string name="label_share">Share The App</string>
    <string name="label_updates">Updates</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_minchar">(Minimum 6 characters)</string>
    <string name="text1">Enter the phone number of recipient</string>
    <string name="text2">Select Contact</string>
    <string name="text3">Share</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_logout">Logout</string>
    <string name="name">Full Name</string>
    <string name="mobile">10 digit mobile number</string>
    <string name="college">College/Organisation</string>
    <string name="course">Course</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
    <string name="title_activity_rssreader">RSSReader</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_quest">Quest</string>

</resources>