<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical" 
    android:background="@drawable/bg3"
    android:theme="@style/AppTheme">
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"   
        android:src="@drawable/title_bar"
        android:contentDescription="@string/image_logo"
        android:onClick="home" 
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="32dp"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:hint="@string/email"
        android:inputType="text|textEmailAddress" />
    
    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:hint="@string/password"
        android:inputType="text|textPassword" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignLeft="@id/editText2"
        android:layout_below="@id/editText2"
        android:textColor="#FFFFFF"
        android:textSize="18dip" />

    <Button
        android:id="@+id/button1"
        style="@style/main_menu"
        android:layout_width="90dip"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:background="@drawable/green_menu_button"
        android:text="@string/login" />

    <Button
        android:id="@+id/button2"
        style="@style/main_menu"
        android:layout_width="90dip"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/editText2"
        android:background="@drawable/green_menu_button"
        android:text="@string/register" />

    </RelativeLayout>